Closed
Bug 703534
Opened 14 years ago
Closed 14 years ago
Build failure on platforms without YARR JIT
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla11
People
(Reporter: glandium, Assigned: glandium)
References
Details
(Whiteboard: [inbound])
Attachments
(1 file)
|
863 bytes,
patch
|
luke
:
review+
|
Details | Diff | Splinter Review |
Build fails with:
ExecutableAllocator.h:440:6: error: #error "The cacheFlush support is missing on this platform."
It looks like this is because bug 673158 added an unconditional #include "assembler/jit/ExecutableAllocator.h" in js/src/jscompartment.cpp, while there was already such an include, ifdef'ed on ENABLE_YARR_JIT.
| Assignee | ||
Comment 1•14 years ago
|
||
Attachment #575413 -
Flags: review?(luke)
Updated•14 years ago
|
Attachment #575413 -
Flags: review?(luke) → review+
| Assignee | ||
Comment 2•14 years ago
|
||
Whiteboard: [inbound]
Comment 3•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla11
You need to log in
before you can comment on or make changes to this bug.
Description
•