Bug 703534 - Fix build failure on platforms without YARR JIT. r=luke